--- a/BlazorTrainingAprilServer/Properties/launchSettings.json
+++ b/BlazorTrainingAprilServer/Properties/launchSettings.json
@@ -1,7 +1,7 @@
 {
   "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
+    "windowsAuthentication": true,
+    "anonymousAuthentication": false,
     "iisExpress": {
       "applicationUrl": "http://localhost:25182",
       "sslPort": 44337
