Entity Framework Model

--- a/BlazorTrainingAprilServer/appsettings.json
+++ b/BlazorTrainingAprilServer/appsettings.json
@@ -1,5 +1,7 @@
 {
- 
+  "ConnectionStrings": {
+    "AufgabenConn": "Data Source=TABLET-7FFAS57A\\SQLEXPRESS;Initial Catalog=TodoDB;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
